[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/images/Tiles/RunnerTileSet.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/Platform.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 96, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 55.5, 16.5 )

[node name="Platform" type="StaticBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 48, 8 )
shape = SubResource( 2 )
one_way_collision = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 48.5, 3.5 )
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 48.5, 4.5 )
scale = Vector2( 6.05, 2.05 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
